This this the changelog file for the Pothos C++ library.

Release 0.6.0 (pending)
==========================

- Removed deprecated API call OutputPort::popBuffer()
- Re-implement RingDeque container to use std::allocator
- Removed previously unused ObjectM class (mutable object)
- Added Pothos::Util::SpinLockRW for single write, multi-read
- API changes to Object, Proxy, and Callable interface types
  * Object supports implicit templated convert to target type
  * Proxy supports implicit templated convert to target type
  * Deprecated Callable interface's callVoid(), use call()
  * Deprecated Callable interface's callObject(), use call()
  * Deprecated Proxy interface's callVoid(), use call()
  * Deprecated Proxy interface's callProxy(), use call()
- Automatic slots for all void calls in Block::registerCallable:
  Previously calls with 1 or more arguments became automatic slots.
  The new rule checks for void return type and supports calls
  without arguments. In addition registerSlot() will not throw
  when registering slots that were created automatically.
- Renamed the project repo from pothos to PothosCore
- Updated toolkit/submodule URLs for repo rename
  - Renamed pothos-gui toolkit to PothosFlow
  - Renamed pothos-sdr toolkit to PothosSoapy
- Alternative JSON C++ library to handle JSON parsing/emitting

Release 0.5.1 (2017-08-16)
==========================

- Fixed buffer inlining corner case for amalgamated multi-buffers
- Moved cmake modules into subdirectory to hide them from cmake's
  default project search path when cloned in user's home directory
- Fix for doc parser and getline for windows newlines
- Added missing functional include for Remote/Server.cpp
- Exception handling for EvalEnvironment::registerConstantObj()
- Fixed memory leak in Util FileLock implementation

Release 0.5.0 (2017-04-27)
==========================

- BlockEval API changes to support GUI evaluator
- DocUtils API changes to support GUI docs query